fix: remove padding on small size

--- a/packages/ocean-core/src/components/_card-list-item.scss
+++ b/packages/ocean-core/src/components/_card-list-item.scss
@@ -108,6 +108,7 @@
 
     .ods-card-list-item__leading-icon {
       background-color: transparent;
+      padding: 0;
     }
   }
 
